# Changelog

All notable changes to this project will be documented in this file.

## Unreleased

### Core

- interduced slices

### Documentation

- add doxygen comments for public headers and enable graphviz support

### Macros

- Merge pull request #2 from Fabbboy/codex/implement-task-from-markdown

Implement CU_ARRAY_LEN macro

- Add UTF-8 case classification macros

- Merge pull request #3 from Fabbboy/codex/add-utf-8-utility-and-hashing-methods

Add UTF‑8 case classification macros

### Memory

- c allocator

- start of page allocator

- Implement cross-platform page allocator

- Merge pull request #1 from Fabbboy/codex/finish-cross-platform-page-allocator

Finish page allocator

- testing allocators

- added alignment to page_allocator

### Misc

- init

- formatted

- lets use llvm

- much better

- rename

- rename

- ignoring parameter

- added newline

- formating

- tdo

- restructoring

- add dir

- adds coding standards

- adds markdown

- Fix includes after moving object headers

- adds comment

- comment

- moved

- utf handling
- integrate doxygen build target

- document cu_Slice_create

- simplify doxygen config and theme

- generate versioned config.h for docs

- prefix optional slice types with cu_

- clarify that slices never allocate memory

- adds changelog

- no utf

- adds utf8

- removed deps

### Objects

- string: document api and refine result

### Refactoring

- refactor:moved comments

- refactor: removes gitignores

- adds changelog

- no utf

- adds utf8

- removed deps


### Objects

- string: document api and refine result


### Refactoring

- refactor:moved comments

- refactor: removes gitignores

<!-- generated by git-cliff -->